[package]
name = "cargo-about"
version = "0.2.0"
description = "Cargo plugin for generating a listing of all of the crates and the the terms under which they are licensed"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
repository = "https://github.com/EmbarkStudios/cargo-about"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cargo-about"
homepage = "https://github.com/EmbarkStudios/cargo-about"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "license", "spdx"]
exclude = [
  "media/"
]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "cargo-about"
path = "src/cargo-about/main.rs"

[dependencies]
anyhow = "1.0.26"
askalono = "0.4.2"
chrono = "0.4.10"
git2 = "0.11"
handlebars = { version = "3.0.1", features = ["dir_source"] }
home = "0.5.3"
ignore = "0.4.11"
krates = "0.2.0"
license = "1.1.0"
quote = "=1.0.2" # https://users.rust-lang.org/t/failure-derive-compilation-error/39062
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
smallvec = "1.2.0"
spdx = "0.3.3"
structopt = "0.3.11"
ring = "0.16.11"
tracing = "0.1.13"
tracing-fmt = "0.1.1"
tracing-subscriber = "0.2.2"
toml = "0.5.6"
url = "2.1.1"

[dependencies.cd]
#optional = true
#path = "../clearly-defined"
git = "https://github.com/EmbarkStudios/clearly-defined"
branch = "impl"
features = ["blocking", "rustls"]

[features]
# If enabled, vendors the openssl code and builds from source, this is needed
# for making musl builds reliable without too much hassle
default = ["vendored-openssl"]
vendored-openssl = ["git2/vendored-openssl"]
